# mrml

./: .dockerignore  .editorconfig  .git-metrics.toml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Makefile  changelog.md  cimetrics.toml  cliff.toml  code-of-conduct.md  codebench.toml  contributing.md  readme.md  release-plz.toml  rustfmt.toml
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml  semantic.yml
.github/workflows/: code-checking.yml  commit-lint.yml  example-axum.yml  example-demo-test.yml  example-demo.yml  main.yml  mrml-cli-main.yml  mrml-cli-release.yml  mrml-core-main.yml  mrml-core-publish.yml  mrml-core-release.yml  mrml-python-main.yml  mrml-python-release.yml  mrml-python.yml  mrml-wasm-main.yml  mrml-wasm-release.yml  publish.yml  release-pr.yml  release-trigger.yml  resources-check.yml  security-audit.yml  testing.yml
asset/: github-social.xcf
bench/: Cargo.toml  docker-compose.yml
bench/src/: main.rs
benches/: basic.rs  template.rs
benchmarks/: Dockerfile  benchmark.sh  readme.md  stress.Dockerfile  stress.sh
benchmarks/mjml-stress/: main.js  package-lock.json  package.json
benchmarks/mrml-stress/: Cargo.toml
doc/: todo.md
example/mjml-bench/: package.json
example/mjml-express/: Dockerfile  package-lock.json  package.json
example/mrml-actix/: Cargo.toml  Dockerfile  readme.md
example/mrml-actix/src/: main.rs
example/mrml-wasm/: Cargo.toml  package-lock.json
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/demo/: README.md  index.html  package.json  vite.config.ts
examples/mjml-bench/: package-lock.json  package.json
examples/mrml-actix/: Cargo.toml  Dockerfile
examples/mrml-actix/src/: main.rs
examples/mrml-browser/: Makefile  README.md  package-lock.json  package.json
examples/mrml-node/: Makefile  package-lock.json  package.json
examples/mrml-wasm/: Cargo.toml  README.md
lib/common-macros/: Cargo.toml
lib/html-compare/: Cargo.toml
lib/mrml-json-macros/: Cargo.toml
lib/mrml-json-macros/src/: element.rs
lib/mrml-macros/: Cargo.toml
lib/mrml-parse-macros/: Cargo.toml
lib/mrml-print-macros/: Cargo.toml
lib/mrml-print-macros/src/: attributes.rs  children.rs  element.rs  lib.rs
resources/: mj-accordion-font-padding.html  mj-accordion-other.html  mj-accordion-other.mjml  mj-body-background-color.mjml  mj-body-width.mjml  mj-button-background.mjml  mj-button-font-style.mjml  mj-button-width.mjml  mj-carousel-align-border-radius-class.html  mj-carousel-thumbnails.html  mj-column-class.html  mj-font.mjml  mj-group-width.html  mj-group.mjml  mj-hero-height.html  mj-image-container-background-color.mjml  mj-image-fluid-on-mobile.mjml  mj-navbar-align-class.mjml  mj-section-border-radius.mjml  mj-section-text-align.mjml  mj-social-link.html  mj-table-text.mjml  mj-text-align.mjml  mj-text-font-size.mjml  mj-text-font-weight.mjml  mj-text-line-height.mjml  mj-text-padding.mjml  mj-text.mjml  mj-wrapper-other.mjml  mj-wrapper-padding.mjml
resources/template/: air-astana.html  air-astana.mjml  amario.html  amario.json
script/: html-coverage.sh  push-coverage.sh  run-bench.sh  run-coverage.sh
scripts/: package-lock.json  package.json  update-resources.js  update-resources.sh
src/: error.rs  lib.rs  macros.rs  main.rs  parser.rs
src/comment/: json.rs  mod.rs  render.rs
src/elements/: error.rs  mjml.rs  mod.rs  prelude.rs
src/helper/: condition.rs  mod.rs  sort.rs  spacing.rs  test.rs
src/mj_accordion/: children.rs  json.rs  mod.rs  parse.rs  print.rs  render.rs
src/mj_accordion_element/: children.rs  json.rs  mod.rs  parse.rs  print.rs  render.rs
src/mj_accordion_text/: json.rs  mod.rs  parse.rs  print.rs  render.rs
src/mj_accordion_title/: json.rs  mod.rs  print.rs  render.rs
src/mj_attributes/: children.rs  json.rs  mod.rs  parse.rs  print.rs
src/mj_attributes_all/: json.rs  mod.rs  parse.rs  print.rs
src/mj_attributes_class/: json.rs  mod.rs  parse.rs  print.rs
src/mj_attributes_element/: json.rs  parse.rs
src/mj_body/: children.rs  json.rs  mod.rs  parse.rs  print.rs  render.rs
src/mj_breakpoint/: json.rs  mod.rs  parse.rs  print.rs
src/mj_button/: json.rs  mod.rs  parse.rs  print.rs  render.rs
src/mj_carousel/: children.rs  json.rs  mod.rs  parse.rs  print.rs  render.rs
src/mj_carousel_image/: json.rs  mod.rs  print.rs  render.rs
src/mj_column/: json.rs  mod.rs  print.rs  render.rs
src/mj_divider/: json.rs  mod.rs  parse.rs  print.rs  render.rs
src/mj_font/: json.rs  mod.rs  parse.rs  print.rs
src/mj_group/: json.rs  mod.rs  print.rs  render.rs
src/mj_head/: children.rs  json.rs  mod.rs  parse.rs  print.rs  render.rs
test/: mj-accordion-font-padding.mjml  mj-accordion-icon.html  mj-accordion-icon.mjml  mj-accordion.mjml  mj-attributes.html  mj-attributes.mjml  mj-body-background-color.html  mj-body-class.html  mj-body-width.html  mj-body-without-comments.html  mj-body.html  mj-body.mjml  mj-breakpoint-default.html  mj-breakpoint-options.html  mj-breakpoint.html  mj-button-align.html  mj-button-background.html  mj-button-border-radius.html  mj-button-border-radius.mjml  mj-button-border.html  mj-button-class.html  mj-button-class.mjml  mj-button-color.html  mj-button-container-background-color.html  mj-button-container-background-color.mjml  mj-button-example.html  mj-button-font-family.html  mj-button-font-size.html  mj-button-font-size.mjml  mj-button-font-style.html  mj-button-font-weight.html  mj-button-font-weight.mjml  mj-button-height.html  mj-button-href.html  mj-button-href.mjml  mj-button-inner-padding.html  mj-button-line-height.html  mj-button-line-height.mjml  mj-button-padding.html  mj-button-text-decoration.html  (+172 more)
(+382 files in other folders)
