[workspace]
members = [
    "examples/axum",
    "packages/mrml-cli",
    "packages/mrml-core/lib/css-compare",
    "packages/mrml-core/lib/html-compare",
    "packages/mrml-core",
    "packages/mrml-python",
    "packages/mrml-wasm",
]
resolver = "2"

[workspace.dependencies]
htmlparser = { version = "0.2" }
similar-asserts = { version = "1.6" }

[workspace.package]
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jdrouet/mrml/"
