[package]
name = "bench"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "3.1"
bollard = "0.5.1"
futures-util = "0.3.4"
tokio = { version = "0.2.17", features = ["time", "fs"] }
