[package]
name = "mrml-actix"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
mrml = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bytes = "0.5.4"
