[package]
name = "axum-mrml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
mrml = { version = "5.0.0", path = "../../packages/mrml-core", features = [
    "async",
    "http-loader-async-reqwest",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = { version = "1.0" }
tower = { version = "0.5", features = ["util"] }
