[package]
name = "mrml-actix"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.2"
actix-web = "2.0.0"
actix-rt = "1.0.0"
bytes = "0.5"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
mrml = { path = "../../packages/library" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
common-multipart-rfc7578 = "0.2.0-rc"
